<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="5dp"
    android:weightSum="100"
    tools:context=".MainActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="9dp"
        android:layout_weight="10"
        android:layout_margin="4dp"
        android:textColor="#F10D"
        android:gravity="center"
        android:textSize="15sp"
        android:background="@color/teal_200"
        android:text="@string/Sign_up">

    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:hint="@string/user_hint"
        android:layout_margin="4dp"
        >

    </com.google.android.material.textfield.TextInputEditText>
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:hint="@string/email_hint"
        android:layout_margin="4dp"
        >

    </com.google.android.material.textfield.TextInputEditText>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:hint="@string/Password"
        android:layout_margin="4dp"
        app:passwordToggleEnabled="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:id="@+id/pass"
            >

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cpassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:layout_margin="4dp"
        app:passwordToggleEnabled="true"
        android:hint="@string/cpassword"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/cPpassword"
            android:layout_margin="2dp"
            >

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/Register"
        android:layout_weight="10"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/black"
        android:layout_margin="4dp"
        android:text="@string/register"
        android:textAllCaps="false"
        app:cornerRadius="15dp"
        >

    </com.google.android.material.button.MaterialButton>

    <com.google.android.gms.common.SignInButton
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/sign_in_with_gmail"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        android:layout_weight="10"
        android:text="@string/Login"
        >

    </com.google.android.gms.common.SignInButton>

</LinearLayout>