<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="48dp">

    <TextView
        android:id="@+id/serial_number"
        android:layout_width="88dp"
        android:layout_height="45dp"
        android:padding="4dp"
        android:text="@string/sr_no"
        android:gravity="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.002"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.005">

    </TextView>

    <TextView
        android:id="@+id/state"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:gravity="center"
        android:text="@string/state"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.426"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004">

    </TextView>

    <TextView
        android:id="@+id/count"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:gravity="center"
        android:text="@string/count"
        android:padding="4dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toEndOf="@+id/state"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004">

    </TextView>


</androidx.constraintlayout.widget.ConstraintLayout>